simplified simple version

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A simple program (or script, in bash) that reads in two text files, creates a third file, merges the first two into the third, and lists the output (content of the third file).",
   
   "scripts": {
-    "start": "node index.js",
-    "start-simple": "node simple.js",
-    "restart": "rm -r 3.txt"
+    "start": "node simple.js",
+    "start-async": "node async.js",
+    "restart": "node remove.js"
   },
   "author": "Preston Wallace",
   "license": "MIT",
